[package]
name = "async-tftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-executor = "1.5.0"
async-io = "1.12.0"
async-lock = "2.6.0"
async-trait = "0.1.61"
blocking = "1.3.0"
bytes = "1.3.0"
fern = "0.6.1"
futures-lite = "1.12.0"
log = "0.4.17"
nom = "7.1.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.38"
